--- a/generator/templates/gin/partials/imports.hbs
+++ b/generator/templates/gin/partials/imports.hbs
@@ -1,8 +1,12 @@
 import (
+	"encoding/json"
+	"fmt"
+	"io"
+	"net/http"
 	"strconv"
 	"github.com/go-playground/validator/v10"
 	"github.com/gin-gonic/gin"
-	"github.com/haimkastner/gleece/definitions"
+	"github.com/haimkastner/gleece/external"
 {{#each Controllers}}
 	{{{Name}}}Import "{{{FullyQualifiedPackage}}}"
 	{{#each Routes}}
