--- a/generator/templates/gin/partials/request.args.parsing.hbs
+++ b/generator/templates/gin/partials/request.args.parsing.hbs
@@ -16,40 +16,8 @@
 
 {{#equal PassedIn "Body"}}
 	var {{ToLowerCamel Name}} {{#if TypeMeta.FullyQualifiedPackage}}Param{{{UniqueImportSerial}}}.{{/if}}{{{TypeMeta.Name}}}
-	{{#equal ResponseContentType "application/json"}}
-		{{ToLowerCamel Name}} := ctx.ShouldBindJSON(&value)
-	{{/equal}}
-	{{#equal ResponseContentType "application/xml"}}
-		{{ToLowerCamel Name}} := ctx.ShouldBindXML(&value)
-	{{/equal}}
-	{{#equal ResponseContentType "text/html"}}
-		{{ToLowerCamel Name}} := ctx.ShouldBind(&value)
-	{{/equal}}
-	{{#equal ResponseContentType "text/plain"}}
-		{{ToLowerCamel Name}} := ctx.ShouldBind(&value)
-	{{/equal}}
-	{{#equal ResponseContentType "application/x-www-form-urlencoded"}}
-		{{ToLowerCamel Name}} := ctx.ShouldBind(&value)
-	{{/equal}}
-	{{#equal ResponseContentType "multipart/form-data"}}
-		{{ToLowerCamel Name}} := ctx.ShouldBind(&value)
-	{{/equal}}
-	{{#equal ResponseContentType "application/octet-stream"}}
-		{{ToLowerCamel Name}} := ctx.ShouldBind(&value)
-	{{/equal}}
-	{{#equal ResponseContentType "application/pdf"}}
-		{{ToLowerCamel Name}} := ctx.ShouldBind(&value)
-	{{/equal}}
-	{{#equal ResponseContentType "image/png"}}
-		{{ToLowerCamel Name}} := ctx.ShouldBind(&value)
-	{{/equal}}
-	{{#equal ResponseContentType "image/jpeg"}}
-		{{ToLowerCamel Name}} := ctx.ShouldBind(&value)
-	{{/equal}}
-	{{#equal ResponseContentType "image/gif"}}
-		{{ToLowerCamel Name}} := ctx.ShouldBind(&value)
-	{{/equal}}
-	{{#equal ResponseContentType "text/csv"}}
-		{{ToLowerCamel Name}} := ctx.ShouldBind(&value)
-	{{/equal}}
+	err := bindAndValidateBody[{{#if TypeMeta.FullyQualifiedPackage}}Param{{{UniqueImportSerial}}}.{{/if}}{{{TypeMeta.Name}}}](ctx, "{{{ResponseContentType}}}", &{{ToLowerCamel Name}})
+	if err != nil {
+		// Handle error
+	}
 {{/equal}}
