--- a/generator/templates/gin/partials/reply.response.hbs
+++ b/generator/templates/gin/partials/reply.response.hbs
@@ -1,4 +1,20 @@
 statusCode := getStatusCode(&controller, {{{HasReturnValue}}}, opError)
+ctx.Header("Content-Type", "{{{ResponseContentType}}}")
+{{#LastTypeNameEquals Responses "error"}}
+	if opError != nil {
+{{else}}
+	{{#LastTypeIsByAddress Responses}}
+		if opError != nil {
+	{{else}}
+		emptyErr := {{GetLastTyeFullyQualified Responses}}{}
+		if opError != emptyErr {
+	{{/LastTypeIsByAddress}}
+{{/LastTypeNameEquals}}
+	{{#equal ResponseContentType "application/json"}}
+		{{> JsonErrorResponse}}
+	{{/equal}}
+	return
+}
 {{#equal ResponseContentType "application/json"}}
 	{{> JsonResponse}}
 {{/equal}}
