--- a/generator/templates/gin/partials/request.switch.param.type..hbs
+++ b/generator/templates/gin/partials/request.switch.param.type..hbs
@@ -6,7 +6,7 @@
 {{#equal TypeMeta.Name "int"}}
   {{ToLowerCamel Name}}Uint64, err := strconv.Atoi({{ToLowerCamel Name}}Raw)
   if err != nil {
-    // Handle error
+	{{> JsonValidationErrorResponse }}
   }
   {{ToLowerCamel Name}} := int({{ToLowerCamel Name}}Uint64)
   // Pass to validator
@@ -15,7 +15,7 @@
 {{#equal TypeMeta.Name "int8"}}
   {{ToLowerCamel Name}}Uint64, err := strconv.ParseInt({{ToLowerCamel Name}}Raw, 10, 8)
   if err != nil {
-    // Handle error
+	{{> JsonValidationErrorResponse }}
   }
   {{ToLowerCamel Name}} := int8({{ToLowerCamel Name}}Uint64)
   // Pass to validator
@@ -24,7 +24,7 @@
 {{#equal TypeMeta.Name "int16"}}
   {{ToLowerCamel Name}}Uint64, err := strconv.ParseInt({{ToLowerCamel Name}}Raw, 10, 16)
   if err != nil {
-    // Handle error
+	{{> JsonValidationErrorResponse }}
   }
   {{ToLowerCamel Name}} := int16({{ToLowerCamel Name}}Uint64)
   // Pass to validator
@@ -33,7 +33,7 @@
 {{#equal TypeMeta.Name "int32"}}
   {{ToLowerCamel Name}}Uint64, err := strconv.ParseInt({{ToLowerCamel Name}}Raw, 10, 32)
   if err != nil {
-    // Handle error
+	{{> JsonValidationErrorResponse }}
   }
   {{ToLowerCamel Name}} := int32({{ToLowerCamel Name}}Uint64)
   // Pass to validator
@@ -42,7 +42,7 @@
 {{#equal TypeMeta.Name "int64"}}
   {{ToLowerCamel Name}}Uint64, err := strconv.ParseInt({{ToLowerCamel Name}}Raw, 10, 64)
   if err != nil {
-    // Handle error
+	{{> JsonValidationErrorResponse }}
   }
   {{ToLowerCamel Name}} := int64({{ToLowerCamel Name}}Uint64)
   // Pass to validator
@@ -51,7 +51,7 @@
 {{#equal TypeMeta.Name "uint"}}
   {{ToLowerCamel Name}}Uint64, err := strconv.ParseUint({{ToLowerCamel Name}}Raw, 10, 32)
   if err != nil {
-    // Handle error
+	{{> JsonValidationErrorResponse }}
   }
   {{ToLowerCamel Name}} := uint({{ToLowerCamel Name}}Uint64)
   // Pass to validator
@@ -60,7 +60,7 @@
 {{#equal TypeMeta.Name "uint8"}}
   {{ToLowerCamel Name}}Uint64, err := strconv.ParseUint({{ToLowerCamel Name}}Raw, 10, 8)
   if err != nil {
-    // Handle error
+	{{> JsonValidationErrorResponse }}
   }
   {{ToLowerCamel Name}} := uint8({{ToLowerCamel Name}}Uint64)
   // Pass to validator
@@ -69,7 +69,7 @@
 {{#equal TypeMeta.Name "uint16"}}
   {{ToLowerCamel Name}}Uint64, err := strconv.ParseUint({{ToLowerCamel Name}}Raw, 10, 16)
   if err != nil {
-    // Handle error
+	{{> JsonValidationErrorResponse }}
   }
   {{ToLowerCamel Name}} := uint16({{ToLowerCamel Name}}Uint64)
   // Pass to validator
@@ -78,7 +78,7 @@
 {{#equal TypeMeta.Name "uint32"}}
   {{ToLowerCamel Name}}Uint64, err := strconv.ParseUint({{ToLowerCamel Name}}Raw, 10, 32)
   if err != nil {
-    // Handle error
+	{{> JsonValidationErrorResponse }}
   }
   {{ToLowerCamel Name}} := uint32({{ToLowerCamel Name}}Uint64)
   // Pass to validator
@@ -87,7 +87,7 @@
 {{#equal TypeMeta.Name "uint64"}}
   {{ToLowerCamel Name}}, err := strconv.ParseUint({{ToLowerCamel Name}}Raw, 10, 64)
   if err != nil {
-    // Handle error
+	{{> JsonValidationErrorResponse }}
   }
   // Pass to validator
 {{/equal}}
@@ -95,7 +95,7 @@
 {{#equal TypeMeta.Name "bool"}}
   {{ToLowerCamel Name}}, err := strconv.ParseBool({{ToLowerCamel Name}}Raw)
   if err != nil {
-    // Handle error
+	{{> JsonValidationErrorResponse }}
   }
   // Pass to validator
 {{/equal}}
@@ -103,7 +103,7 @@
 {{#equal TypeMeta.Name "float32"}}
   {{ToLowerCamel Name}}Float64, err := strconv.ParseFloat({{ToLowerCamel Name}}Raw, 32)
   if err != nil {
-    // Handle error
+	{{> JsonValidationErrorResponse }}
   }
   // Pass to validator
   {{ToLowerCamel Name}} := float32({{ToLowerCamel Name}}Float64)
@@ -112,7 +112,7 @@
 {{#equal TypeMeta.Name "float64"}}
   {{ToLowerCamel Name}}, err := strconv.ParseFloat({{ToLowerCamel Name}}Raw, 64)
   if err != nil {
-    // Handle error
+	{{> JsonValidationErrorResponse }}
   }
   // Pass to validator
 {{/equal}}
