Fixed route translation to GIN syntax

--- a/generator/templates/gin/partials/imports.hbs
+++ b/generator/templates/gin/partials/imports.hbs
@@ -4,6 +4,8 @@ import (
 	"io"
 	"net/http"
 	"strconv"
+	"reflect"
+	"regexp"
 	"github.com/go-playground/validator/v10"
 	"github.com/gin-gonic/gin"
 	"github.com/gopher-fleece/gleece/external"
