Add custom validators

--- a/generator/templates/gin/partials/imports.hbs
+++ b/generator/templates/gin/partials/imports.hbs
@@ -23,5 +23,10 @@ import (
 			{{/if}}
 		{{/each}}
 	{{/each}}
+
+	{{#each CustomValidators}}
+		CustomValidatorPkg{{@index}} "{{{FullPackageName}}}"
+	{{/each}}
+
 {{/each}}
 )
