--- a/generator/templates/gin/partials/function.declarations.hbs
+++ b/generator/templates/gin/partials/function.declarations.hbs
@@ -79,3 +79,19 @@ func authorize(ctx *gin.Context, checksLists []SecurityCheckList) *external.Secu
 	// If we got here it means authentication has failed
 	return lastError
 }
+
+func handleAuthorizationError(ctx *gin.Context, authErr *external.SecurityError, operationId string) {
+	statusCode := int(authErr.StatusCode)
+	if authErr.CustomError != nil {
+		// For now, we support JSON only
+		ctx.JSON(statusCode, authErr.CustomError.Payload)
+		return
+	} 
+	stdError := external.Rfc7807Error{
+		Type:     http.StatusText(statusCode),
+		Detail:   authErr.Message,
+		Status:   statusCode,
+		Instance: "/gleece/authorization/" + operationId,
+	}
+	ctx.JSON(statusCode, stdError)
+}
