--- a/generator/templates/gin/partials/json.body.validation.error.response.hbs
+++ b/generator/templates/gin/partials/json.body.validation.error.response.hbs
@@ -1,10 +1,9 @@
 validationError := external.Rfc7807Error{
 	Type:       http.StatusText(http.StatusUnprocessableEntity),
 	Detail:     fmt.Sprintf(
-		"A request was made to operation '{{{OperationId}}}' but parameter %s did not pass validation - Expected %s but got %s",
+		"A request was made to operation '{{{OperationId}}}' but body parameter %s did not pass validation - expected %s",
 		"{{ToLowerCamel Name}}",
 		"{{{TypeMeta.Name}}}",
-		reflect.TypeOf({{ToLowerCamel Name}}{{#ifEqual PassedIn "Body"}}{{else}}Raw{{/ifEqual}}).String(),
 	),
 	Status:     http.StatusUnprocessableEntity,
 	Instance:   "/gleece/validation/{{{../../Tag}}}/{{{OperationId}}}",
