--- a/generator/templates/gin/partials/imports.hbs
+++ b/generator/templates/gin/partials/imports.hbs
@@ -10,6 +10,7 @@ import (
 	"github.com/go-playground/validator/v10"
 	"github.com/gin-gonic/gin"
 	"github.com/gopher-fleece/gleece/external"
+	"github.com/gopher-fleece/gleece/infrastructure/validation"
 	RequestAuth "{{{AuthConfig.FullPackageName}}}"
 {{#each Controllers}}
 	{{{Name}}}Import "{{{FullyQualifiedPackage}}}"
