--- a/generator/templates/gin/partials/json.body.validation.error.response.hbs
+++ b/generator/templates/gin/partials/json.body.validation.error.response.hbs
@@ -1,13 +1,13 @@
 validationError := external.Rfc7807Error{
 	Type:       http.StatusText(http.StatusUnprocessableEntity),
 	Detail:     fmt.Sprintf(
-		"A request was made to operation '{{{OperationId}}}' but body parameter %s did not pass validation - expected %s",
+		"A request was made to operation '{{{OperationId}}}' but body parameter '%s' did not pass validation of '%s' - %s",
 		"{{ToLowerCamel Name}}",
 		"{{{TypeMeta.Name}}}",
+		validation.ExtractValidationErrorMessage(conversionErr),
 	),
 	Status:     http.StatusUnprocessableEntity,
-	Instance:   "/gleece/validation//{{{OperationId}}}",
-	Extensions: map[string]string{"error": conversionErr.Error()},
+	Instance:   "/gleece/validation/{{{../../Tag}}}/{{{OperationId}}}",
 }
 ctx.JSON(http.StatusUnprocessableEntity, validationError)
 return
