--- a/generator/templates/gin/partials/json.validation.error.response.hbs
+++ b/generator/templates/gin/partials/json.validation.error.response.hbs
@@ -1,13 +1,13 @@
 validationError := external.Rfc7807Error{
 	Type:       http.StatusText(http.StatusUnprocessableEntity),
 	Detail:     fmt.Sprintf(
-		"A request was made to operation '{{{OperationId}}}' but parameter %s did not pass validation - Expected %s but got %s",
+		"A request was made to operation '{{{OperationId}}}' but parameter %s was not properly sent - Expected %s but got %s",
 		"{{ToLowerCamel Name}}",
 		"{{{TypeMeta.Name}}}",
 		reflect.TypeOf({{ToLowerCamel Name}}{{#ifEqual PassedIn "Body"}}{{else}}Raw{{/ifEqual}}).String(),
 	),
 	Status:     http.StatusUnprocessableEntity,
-	Instance:   "/gleece/validation/{{{OperationId}}}",
+	Instance:   "/gleece/validation/{{{../../Tag}}}/{{{OperationId}}}",
 	Extensions: map[string]string{"error": conversionErr.Error()},
 }
 ctx.JSON(http.StatusUnprocessableEntity, validationError)
