--- a/generator/templates/gin/partials/request.switch.param.type..hbs
+++ b/generator/templates/gin/partials/request.switch.param.type..hbs
@@ -109,13 +109,12 @@
         validationError := external.Rfc7807Error{
         	Type:       http.StatusText(http.StatusUnprocessableEntity),
         	Detail:     fmt.Sprintf(
-        		"A request was made to operation '{{{OperationId}}}' but body parameter %s did not pass validation - expected %s",
+        		"A request was made to operation '{{{OperationId}}}' but parameter %s did not pass validation - %s",
         		"{{ToLowerCamel Name}}",
-        		"{{{TypeMeta.Name}}}",
+        		validation.ExtractValidationErrorMessage(validatorErr),
         	),
         	Status:     http.StatusUnprocessableEntity,
         	Instance:   "/gleece/validation/{{{../../Tag}}}/{{{OperationId}}}",
-	        Extensions: map[string]string{"error": validatorErr.Error()},
         }
         ctx.JSON(http.StatusUnprocessableEntity, validationError)
         return
