--- a/generator/templates/gin/partials/json.validation.error.response.hbs
+++ b/generator/templates/gin/partials/json.validation.error.response.hbs
@@ -1,7 +1,7 @@
 validationError := external.Rfc7807Error{
 	Type:       http.StatusText(http.StatusUnprocessableEntity),
 	Detail:     fmt.Sprintf(
-		"A request was made to operation '{{{OperationId}}}' but parameter %s was not properly sent - Expected %s but got %s",
+		"A request was made to operation '{{{OperationId}}}' but parameter '%s' was not properly sent - Expected %s but got %s",
 		"{{ToLowerCamel Name}}",
 		"{{{TypeMeta.Name}}}",
 		reflect.TypeOf({{ToLowerCamel Name}}{{#ifEqual PassedIn "Body"}}{{else}}Raw{{/ifEqual}}).String(),
