--- a/generator/templates/gin/partials/request.switch.param.type..hbs
+++ b/generator/templates/gin/partials/request.switch.param.type..hbs
@@ -106,12 +106,13 @@
 
 {{#if Validator}}
     if validatorErr := validatorInstance.Var({{ToLowerCamel Name}}, "{{Validator}}"); validatorErr != nil {
+        fieldName := "{{ToLowerCamel Name}}"
         validationError := external.Rfc7807Error{
         	Type:       http.StatusText(http.StatusUnprocessableEntity),
         	Detail:     fmt.Sprintf(
-        		"A request was made to operation '{{{OperationId}}}' but parameter %s did not pass validation - %s",
-        		"{{ToLowerCamel Name}}",
-        		validation.ExtractValidationErrorMessage(validatorErr),
+        		"A request was made to operation '{{{OperationId}}}' but parameter '%s' did not pass validation - %s",
+        		fieldName,
+        		validation.ExtractValidationErrorMessage(validatorErr, &fieldName),
         	),
         	Status:     http.StatusUnprocessableEntity,
         	Instance:   "/gleece/validation/{{{../../Tag}}}/{{{OperationId}}}",
