Added security enforcement and started cleanup

--- a/generator/templates/gin/partials/imports.hbs
+++ b/generator/templates/gin/partials/imports.hbs
@@ -11,7 +11,7 @@ import (
 	"github.com/gin-gonic/gin"
 	"github.com/gopher-fleece/gleece/external"
 	"github.com/gopher-fleece/gleece/infrastructure/validation"
-	RequestAuth "{{{AuthConfig.FullPackageName}}}"
+	RequestAuth "{{{AuthConfig.AuthFileFullPackageName}}}"
 {{#each Controllers}}
 	{{{Name}}}Import "{{{FullyQualifiedPackage}}}"
 	{{#each Routes}}
