--- a/generator/templates/echo/partials/json.body.validation.error.response.hbs
+++ b/generator/templates/echo/partials/json.body.validation.error.response.hbs
@@ -9,5 +9,4 @@ validationError := external.Rfc7807Error{
 	Status:     http.StatusUnprocessableEntity,
 	Instance:   "/gleece/validation/error/{{{OperationId}}}",
 }
-ctx.JSON(http.StatusUnprocessableEntity, validationError)
-return
+return ctx.JSON(http.StatusUnprocessableEntity, validationError)
