--- a/generator/templates/echo/partials/request.switch.param.type..hbs
+++ b/generator/templates/echo/partials/request.switch.param.type..hbs
@@ -117,7 +117,6 @@
         	Status:     http.StatusUnprocessableEntity,
         	Instance:   "/gleece/validation/error/{{{OperationId}}}",
         }
-        ctx.JSON(http.StatusUnprocessableEntity, validationError)
-        return
+        return ctx.JSON(http.StatusUnprocessableEntity, validationError)
     }
 {{/if}}
