--- a/generator/templates/gin/partials/function.declarations.hbs
+++ b/generator/templates/gin/partials/function.declarations.hbs
@@ -105,3 +105,17 @@ func handleAuthorizationError(ctx *gin.Context, authErr *external.SecurityError,
 	}
 	ctx.JSON(statusCode, stdError)
 }
+
+func wrapValidatorError(validatorErr error, operationId string, fieldName string) external.Rfc7807Error {
+	return external.Rfc7807Error{
+		Type:       http.StatusText(http.StatusUnprocessableEntity),
+		Detail:     fmt.Sprintf(
+			"A request was made to operation '%s' but parameter '%s' did not pass validation - %s",
+			operationId,
+			fieldName,
+			validation.ExtractValidationErrorMessage(validatorErr, &fieldName),
+		),
+		Status:     http.StatusUnprocessableEntity,
+		Instance:   fmt.Sprintf("/gleece/validation/error/%s", operationId),
+	}
+}
